# Python

./: AI_Art.ipynb  Advent_of_Code_1.ipynb  Assignment 1.ipynb  Assignment Four.ipynb  DAT945_Assignment_1.ipynb  Data_Poison_Radiology.ipynb  Final Assignment.ipynb  Findal_Project_GUI.py  First Part .ipynb  HW Week 4.ipynb  July_14th_Tidy_Tuesday.ipynb  Kvasir_Data_Poison_Radiology.ipynb  Model_Inversion.ipynb  MovieData.csv  Police_Data.ipynb  QuakeData.csv  Tidy_Tuesday_12_12.ipynb  Transformer.ipynb  Week 3 Question 2.ipynb  Worked Example.ipynb
Assignments/: Excerise 3 .py  Final Assignment .ipynb  ip.py
Data/: UN_cities_data.csv  kaggle (1).json  movie Distribution.txt
LeetCode/: Reversed String.py
Police Analysis/: Analyiss.md  part-00000-c9f85861-6ef8-44ca-abef-24bbbdb3b9dc-c000.snappy.parquet  part-00001-c9f85861-6ef8-44ca-abef-24bbbdb3b9dc-c000.snappy.parquet  part-00002-c9f85861-6ef8-44ca-abef-24bbbdb3b9dc-c000.snappy.parquet  part-00003-c9f85861-6ef8-44ca-abef-24bbbdb3b9dc-c000.snappy.parquet  part-00004-c9f85861-6ef8-44ca-abef-24bbbdb3b9dc-c000.snappy.parquet  part-00005-c9f85861-6ef8-44ca-abef-24bbbdb3b9dc-c000.snappy.parquet  part-00006-c9f85861-6ef8-44ca-abef-24bbbdb3b9dc-c000.snappy.parquet  test_X.csv  test_y.csv  train_X.csv
Real Estate Data Aggregator/: README.md
Scraper/: READ ME  Resume Parser
Tidy Tuesday/: July_14th_Tidy_Tuesday.ipynb  TidyTuesday.html
Tkinter/: File.py  Final_Project-GUI.py  Functions.py  GUI.py  GUI_V2.py  (+1 more)
regression_app/: README.md  app.py  pyproject.toml
regression_app/templates/: list_uploads.html  upload.html
(+2 files in other folders)
