[tool.poetry]
name = "regression-app"
version = "0.1.0"
description = "Simple app to show students flask and stats"
authors = ["Ryan Marinelli"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
